--- a/style/style.css
+++ b/style/style.css
@@ -26,11 +26,17 @@ nav{
     padding: 10px;
 }
 
+.button{
+    flex-basis: 5%;
+    border: 2px dashed black;
+    background-color: salmon;
+    padding: 10px;
+}
 
-.nav{
+.center-nav{
     flex-basis: 50%;
     background-color: goldenrod;
-    border: 1px dashed black;
+    border: 2px dashed black;
     min-height: 1.5rem;
     
 }
@@ -38,7 +44,7 @@ nav{
 .side-nav{
     flex-basis: 25%;
     background-color: goldenrod;
-    border: 1px dashed black;
+    border: 2px dashed black;
 }
 
 /* Header */
@@ -51,7 +57,7 @@ header{
 .main-header{
     flex-basis: 70%;
     background-color: fuchsia;
-    border: 1px dashed black;
+    border: 2px dashed black;
     min-height: 250px;
 }
 
@@ -63,22 +69,75 @@ header{
 .dodgerblue{
     flex-basis: 70%;
     background-color: dodgerblue;
-    border: 1px dashed black;
+    border: 2px dashed black;
     min-height: 250px;
 }
 
 .pink{
     flex-basis: 30%;
     background-color: pink;
-    border: 1px dashed black;
+    border: 2px dashed black;
     min-height: 300px;
 }
 
 .square-green{
     flex-basis: 100%;
     background-color: green;
-    border: 1px dashed black;
+    border: 2px dashed black;
     min-height: 1000px;
 }
 
 /* Footer */
+
+footer{
+    background-color: black;
+    padding: 10px;
+}
+
+.left-footer{
+    flex-basis: 30%;
+    min-height: 300px;
+    background-color: lightsalmon;
+    border: 2px dashed black;
+}
+
+.right-footer{
+    flex-basis: 70%;
+    min-height: 300px;
+    background-color: lightskyblue;
+    border: 2px dashed black;
+    display: flex;
+}
+
+.col{
+    flex-basis: 70%;
+    min-height: 300px;
+    background-color: lightskyblue;
+    border: 2px dashed white;
+    display: flex;
+}
+
+.breakline{
+    border: 1px solid white;
+    margin: 20px 0 10px 0;
+}
+
+/* Bottom Footer */
+
+.bottom-footer{
+    flex-basis: 100%;
+    background-color: aqua;
+    border: 2px dashed black;
+    min-height: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.button.left{
+    margin-left: -12px;
+}
+
+.button.right{
+    margin-right: -12px;
+}
